<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textMyNanodegreeApps"
        android:textSize="20sp" />

    <Button
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnSpotifyStreamer"
        android:layout_below="@+id/textMyNanodegreeApps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="showToast" />

    <Button
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btnScoresApp"
        android:layout_below="@+id/btnSpotifyStreamer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToast" />

    <Button
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btnLibraryApp"
        android:layout_below="@+id/btnScoresApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToast" />

    <Button
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_together"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@+id/btnLibraryApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToast" />

    <Button
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btnXyzReader"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToast" />

    <Button
        style="@style/AppTheme.Widget.Button.Accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXyzReader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToast" />
</RelativeLayout>
